# msfsm

./: LICENSE  README.md  main.cpp  meson.build  msfsm.cpp  msfsm.files  msfsm.hpp  msfsm.includes
.github/workflows/: c-cpp.yml
doc/: conf.py  index.rst
examples/: elevator.cpp  elevator.expect  elevator2.cpp  elevator2.expect  events.cpp  meson.build  motor-separate.cpp  motor-separate.expect  motor.cpp  motor.expect  simple-nested.cpp  simple-nested.expect  simple.cpp  simple.expect  states_out.cpp  states_out.expect  test.sh
