inc = include_directories('..')

test('simple', executable('simple', 'simple.cpp', include_directories: inc))
test('events', executable('events', 'events.cpp', include_directories: inc))
test('elevator',  executable('elevator', 'elevator.cpp', include_directories: inc))
test('elevator2',  executable('elevator2', 'elevator2.cpp', include_directories: inc))
test('motor', executable('motor', 'motor.cpp', include_directories: inc))
